Reworked remaining issues

--- a/themes/liquidbytes/layouts/partials/brand.html
+++ b/themes/liquidbytes/layouts/partials/brand.html
@@ -1,1 +1,2 @@
-<img src="/img/logo.png" title="Liquid Bytes" />
+<img src="/img/logo.png" title="Liquid Bytes" class="hide-on-small-only" />
+<img src="/img/logo-small.png" title="Liquid Bytes" class="show-on-small hide-on-med-and-up" />
