--- a/themes/liquidbytes/layouts/partials/footer.html
+++ b/themes/liquidbytes/layouts/partials/footer.html
@@ -1,12 +1,12 @@
 <footer class="page-footer grey darken-3 white-text">
     <div class="row max-width">
-        <div class="col s12 l10 offset-l1 clear-padding">
+        <div class="col s10 l10 offset-l1 offset-s1 clear-padding">
             {{ partial "footer-container" . }}
         </div>
     </div>
     <div class="footer-copyright grey darken-4">
         <div class="row max-width" style="width: 100%;">
-            <div class="col s12 l10 offset-l1">
+            <div class="col s10 l10 offset-l1 offset-s1">
                 {{ partial "footer-copyright" . }}
             </div>
         </div>
