--- a/themes/liquidbytes/layouts/partials/head-meta.html
+++ b/themes/liquidbytes/layouts/partials/head-meta.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="theme-color" content="#3949ab">
+<meta name="theme-color" content="#0074c5">
 
 {{ template "_internal/opengraph.html" . }}
 <meta property="og:image" content="{{ .Site.Params.thumbnail }}">
