--- a/themes/liquidbytes/static/css/style.css
+++ b/themes/liquidbytes/static/css/style.css
@@ -3,6 +3,10 @@
 body {
   font-weight: 300;
   background-color: #ffffff;
+  font-size: 15px;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .max-width {
@@ -79,10 +83,11 @@ figure>img {
 nav ul a,
 nav .brand-logo {
   color: #444;
+  font-size: 16px;
 }
 
 p {
-  line-height: 2rem;
+  line-height: 1.5;
 }
 
 .sidenav-trigger {
@@ -140,12 +145,6 @@ a {
   color: #3949ab;
 }
 
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
 main {
   flex: 1 0 auto;
 }
@@ -193,6 +192,11 @@ blockquote {
   border-left: 5px solid #0074c5;
   background-color: #fafafa;
   border-radius: 3px;
+}
+
+article img {
+  max-width: 100%;
+  height: auto;
 }
 
 article a:hover {
