--- a/themes/liquidbytes/layouts/_default/baseof.html
+++ b/themes/liquidbytes/layouts/_default/baseof.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/css/materialize.min.css" type="text/css" media="screen,projection"/>
+    <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen,projection"/>
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen,projection"/>
 
     {{ if .RSSLink }}
@@ -41,7 +42,7 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="/js/materialize.js"></script>
+    <script src="/js/materialize.min.js"></script>
     <script src="/js/init.js"></script>
   </body>
 </html>
