Added logos for retina

--- a/themes/liquidbytes/layouts/partials/brand.html
+++ b/themes/liquidbytes/layouts/partials/brand.html
@@ -1,2 +1,2 @@
-<img src="/img/logo.png" title="Liquid Bytes" class="hide-on-small-only" />
-<img src="/img/logo-small.png" title="Liquid Bytes" class="show-on-small hide-on-med-and-up" />
+<img src="/img/logo.png" title="Liquid Bytes" class="hide-on-small-only" srcset="/img/logo-retina.png 2x" />
+<img src="/img/logo-small.png" title="Liquid Bytes" class="show-on-small hide-on-med-and-up" srcset="/img/logo-small-retina.png 2x" />
