--- a/themes/liquidbytes/layouts/partials/footer.html
+++ b/themes/liquidbytes/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer grey darken-3 white-text">
+<footer class="page-footer grey darken-3 white-text no-print">
     <div class="row max-width">
         <div class="col s10 l10 offset-l1 offset-s1 clear-padding">
             {{ partial "footer-container" . }}
