--- a/themes/liquidbytes/layouts/_default/list.html
+++ b/themes/liquidbytes/layouts/_default/list.html
@@ -5,7 +5,7 @@
     <div class="section no-pad-bot">
         <div class="container">
             <h1 class="header center cyan-text text-lighten-2"><span class="dark-shadow">Despite all the fancy tools we have today, software projects fail as often as 15 years ago.</span></h1>
-            <div class="row center">
+            <div class="row center ">
                 <h5 class="header col s12 light">
                     <span class="dark-shadow">
                     More frameworks &amp; tools are not a solution.
@@ -16,7 +16,7 @@
             <br><br>
         </div>
     </div>
-    <div class="parallax"><img src="/img/paralax_home.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax no-print"><img src="/img/paralax_home.jpg" alt=""></div>
 </div>
 
 
