--- a/themes/liquidbytes/layouts/_default/summary.html
+++ b/themes/liquidbytes/layouts/_default/summary.html
@@ -5,8 +5,8 @@
         </h3>
         <div class="overview-meta">{{ partial "article-meta-short" . }}</div>
         {{ if .Summary }}
-        <div class="overview-summary">{{ .Summary }}</div>
-        <div class="overview-more"><a href="{{ .RelPermalink }}">Read more...</a></div>
+        <p class="overview-summary">{{ .Summary }}</p>
+        <div class="overview-more no-print"><a href="{{ .RelPermalink }}">Read more...</a></div>
         {{ end }}
     </div>
 </article>
