--- a/themes/liquidbytes/layouts/_default/list.html
+++ b/themes/liquidbytes/layouts/_default/list.html
@@ -5,13 +5,13 @@
     <div class="section no-pad-bot">
         <div class="container">
             <h1 class="header center cyan-text text-lighten-3"><span class="dark-shadow">Despite all the fancy tools we have today, software projects fail as often as 15 years ago.</span></h1>
-            <div class="row center ">
-                <h5 class="header col s12 light">
-                    <span class="dark-shadow">
-                    More frameworks &amp; tools are not a solution.
-                    Instead we need to explore more humane ways of collaborating, establish a culture of continuous learning and strive for technical excellence.
-                    </span>
-                </h5>
+            <div class="row">
+            <h5 class="header center col s12 light">
+                <span class="dark-shadow">
+                More frameworks &amp; tools are not a solution.
+                Instead we need to explore more humane ways of collaborating, establish a culture of continuous learning and strive for technical excellence.
+                </span>
+            </h5>
             </div>
         </div>
     </div>
