--- a/themes/liquidbytes/static/css/style.css
+++ b/themes/liquidbytes/static/css/style.css
@@ -107,15 +107,22 @@ p {
 }
 
 .parallax-container {
-    min-height: 270px;
+    min-height: 280px;
     line-height: 0;
     height: auto;
     color: white;
     margin-bottom: 20px;
 }
 
+.dark-shadow {
+    text-shadow: 1px 1px 1px black;
+    font-weight: 400;
+    line-height: 2rem;
+    display: inline;
+}
+
 .parallax-container .section {
-    padding-top: 40px;
+    padding-top: 60px;
     width: 100%;
 }
 
@@ -150,11 +157,6 @@ p {
 
 footer.page-footer {
     margin: 0;
-}
-
-.dark-shadow {
-    text-shadow: -2px 0px 2px rgba(0, 0, 0, 0.5),
-    2px 0px 2px rgba(0, 0, 0, 0.5);
 }
 
 a {
