Fixed some contents

--- a/themes/liquidbytes/layouts/partials/head-meta.html
+++ b/themes/liquidbytes/layouts/partials/head-meta.html
@@ -7,4 +7,5 @@
 <meta property="og:image" content="{{ .Site.Params.thumbnail }}">
 
 {{ template "_internal/twitter_cards.html" . }}
-<meta property="twitter:image" content="{{ .Site.Params.thumbnail }}">
+<meta name="twitter:image" content="{{ .Site.Params.thumbnail }}">
+<meta name="twitter:creator" content="@lastzero">
