--- a/themes/liquidbytes/layouts/_default/baseof.html
+++ b/themes/liquidbytes/layouts/_default/baseof.html
@@ -9,19 +9,19 @@
     {{ $title := delimit (slice .Title "&middot;" .Site.Title) " " }}
     <title>{{ .Title }}</title>
 
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <!-- Page styles -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="/css/materialize.min.css" type="text/css" media="screen,projection" />
-    <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen,projection" />
-    <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen,projection" />
-    <link rel="stylesheet" href="/css/print.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/css/materialize.min.css" type="text/css" media="screen,projection">
+    <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen,projection">
+    <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen,projection">
+    <link rel="stylesheet" href="/css/print.css" type="text/css" media="print">
 
     {{ if .RSSLink }}
-      <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ $title }}" />
-      <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ $title }}" />
+      <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ $title }}">
+      <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ $title }}">
     {{ end }}
 
     {{ partial "head-custom.html" . }}
