Changed background image

--- a/themes/liquidbytes/layouts/partials/header.html
+++ b/themes/liquidbytes/layouts/partials/header.html
@@ -41,7 +41,7 @@
 <ul id="nav-mobile" class="sidenav no-print">
     <li><div class="info-view white-text">
         <div class="background">
-            <img src="/img/sidebar.jpg">
+            <img src="/img/paralax_home_material.jpg">
         </div>
         <h3><span class="dark-shadow">Software Engineering &amp; Management Blog</span></h3>
     </div></li>
