--- a/themes/liquidbytes/layouts/_default/list.html
+++ b/themes/liquidbytes/layouts/_default/list.html
@@ -4,7 +4,7 @@
 <div id="index-banner" class="parallax-container hide-on-med-and-down">
     <div class="section no-pad-bot">
         <div class="container">
-            <h1 class="header center cyan-text text-lighten-3"><span class="dark-shadow">Despite all the fancy tools we have today, software projects fail as often as 15 years ago.</span></h1>
+            <h1 class="header center white-text text-lighten-3"><span class="dark-shadow">Despite all the fancy tools we have today, software projects fail as often as 15 years ago.</span></h1>
             <div class="row">
             <h5 class="header center col s12 light">
                 <span class="dark-shadow">
@@ -15,7 +15,7 @@
             </div>
         </div>
     </div>
-    <div class="parallax no-print"><img src="/img/paralax_home_dark.jpg" alt=""></div>
+    <div class="parallax no-print"><img src="/img/paralax_home_material.jpg" alt=""></div>
 </div>
 
 
