Add PhotoPrism post and change home cover

--- a/themes/liquidbytes/layouts/_default/list.html
+++ b/themes/liquidbytes/layouts/_default/list.html
@@ -15,7 +15,7 @@
             </div>
         </div>
     </div>
-    <div class="parallax no-print"><img src="/img/paralax_home_material.jpg" alt=""></div>
+    <div class="parallax no-print"><img src="/img/paralax_home_prism.jpg" alt=""></div>
 </div>
 
 
